# vibe-kanban

./: .gitignore  Cargo.toml  TAURI_INTEGRATION.md  TAURI_QUICKSTART.md  TAURI_SUMMARY.md  TAURI_VERIFICATION_REPORT.md  package.json  pnpm-lock.yaml  tauri.conf.json
docs/: TAURI.md
frontend/: Cargo.toml  package.json  tauri.conf.json.backup
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: adapter.ts
frontend/src/utils/: tauri.ts
scripts/: tauri-dev.sh
tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json
tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
tauri/src/commands/: config.rs  deployment.rs  executors.rs  filesystem.rs  mod.rs  projects.rs  tasks.rs
